--- a/package.json
+++ b/package.json
@@ -1,17 +1,37 @@
 {
   "name": "humint",
-  "version": "0.0.1",
-  "description": "Logger",
+  "version": "1.2.0",
+  "description": "Colorfull tagged logger",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "tap index.test.js",
+    "precoverage": "rimraf ./coverage",
+    "coverage": "nyc --coverage-report=html tap index.test.js"
   },
-  "author": "",
+  "files": [
+    "index.js"
+  ],
+  "keywords": [
+    "logger",
+    "log",
+    "winston",
+    "debug",
+    "color",
+    "tag",
+    "tagged"
+  ],
+  "author": "Zero Bias",
   "license": "MIT",
   "dependencies": {
     "chalk": "^1.1.3",
-    "debug": "^2.3.1",
-    "ramda": "^0.22.1",
+    "debug": "^2.6.0",
+    "ensue": "^1.1.2",
+    "ramda": "^0.23.0",
     "winston": "^2.3.0"
+  },
+  "devDependencies": {
+    "nyc": "^10.0.0",
+    "rimraf": "^2.5.4",
+    "tap": "^8.0.1"
   }
 }
